# stacking-game-academic

./: .coverage  .gitignore  Makefile  Makefile.backup.tabs_issue  README.md  README_network_coordination_game.md  pyproject.toml
configs/: params.yaml
data/config/: mev_endpoints.txt
data/processed/: operator_params.csv  operators_normalized.csv  params_summary.csv
docs/: BIGQUERY_REPRO.md  abstract.md  equations.tex
notebooks/: README.md
notebooks/calibration/: 01_participation_adjusted_hhi.ipynb
notebooks/diversity/: 02_relay_diversity.ipynb  03_dvt_effects.ipynb
notebooks/market/: 01_fee_mev_inputs.ipynb
notebooks/metrics/: 00_hhi_eth_cosmos.ipynb
reports/metrics/: hhi_eth_cosmos.html  hhi_summary.json  hhi_summary.md  reward_inputs.csv
reports/simulations/: mc_summary.md
runs/sim_20251021T190019Z/: metrics.txt  operators.csv
runs/sim_from_cal/: metrics.txt  operators.csv
scripts/: build_hhi_summary.py  build_mc_summary.py  build_reward_inputs.py  check_anchors.py  mc_network_coordination.py  participation_adjusted_hhi.py  run_ncg_example.py
src/data/: calibrate_penalty.py  cosmos_hhi.py  cosmos_staking_pull.py  effectiveness_owner_merge.py  eth_effectiveness_pull.py  eth_merge_hhi.py  eth_snapshot.py  mev_merge_owner.py  mev_relay_pull.py  quality_adjusted_stake.py  rated_hhi.py  rated_pull.py  summarize_concentration.py
src/metrics/: hhi.py
src/model/: issuance.py
src/models/: network_coordination_game.py
src/staking_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model.py
(+18 files in other folders)
