[project]
name = "staking-game"
version = "0.1.0"
description = "Simulation framework for PoS validator concentration as a risk-adjusted equilibrium."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "jupyter",
  "pytest",
  "ruff"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "requests>=2.31"
]
[project.optional-dependencies]
dev = [
  "ipykernel",
  "jupyter",
  "pytest",
  "ruff"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
